chore: initial site + iss workflow

--- a/index.html
+++ b/index.html
@@ -1,18 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>My Website</title>
-  
-  <!-- Fonts and Meta -->
-  <meta name="description" content="This is an assignment for TDS from the IITM BS Degree course" />
-  <meta name="author" content="Kavya" />
-
-</head>
-<body>
-<!--email_off-->23f2001817@ds.study.iitm.ac.in<!--/email_off-->
-</body>
+﻿<!doctype html>
+<html>
+  <head><meta charset="utf-8"><title>Portfolio</title></head>
+  <body>
+    <h1>My Portfolio</h1>
+    <!--email_off-->23f2001817@ds.study.iitm.ac.in<!--/email_off-->
+  </body>
 </html>
-
